Fix sector dimensions to avoid cutoff

--- a/components/_sector.sass
+++ b/components/_sector.sass
@@ -31,11 +31,11 @@ $sector--b-background: #cfd9db !default
 
   &::before
     content: ''
-    height: 9999px
+    height: 1000%
     left: 0
     position: absolute
     top: 0
-    width: 9999px
+    width: 1000%
     z-index: -1
 
   &:first-child::before
